# elections-canada-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  server.py  utils.py
.github/workflows/: publish.yml
Documentation_for_Claude/: llms-full.txt
elections_canada_mcp/: __init__.py  server.py
elections_canada_mcp/datafiles/: 2021_riding_vote_redistributed_ElectionsCanada.json
test/: complex_questions.json
